<resources>
    <string name="app_name">ExamenListaJugadores</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_nuevo_jugador">NuevoJugador</string>
    <string name="nombre">Nombre:</string>
    <string name="base">Base</string>
    <string name="escolta">Escolta</string>
    <string name="alero">Alero</string>
    <string name="ala_pivot">Ala-pívot</string>
    <string name="pivot">Pívot</string>
</resources>
